Kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: javapg
  labels:
    name: javapg
